Fix div widths on smaller screens

--- a/app/projects/other-projects/other-projects.component.css
+++ b/app/projects/other-projects/other-projects.component.css
@@ -11,15 +11,15 @@
   padding: 5px;
   box-sizing: border-box; }
 
+.project {
+  width: calc(50% - 4px); }
+
 .project, .block {
   margin: 5px 2px;
   text-align: center;
   float: left; }
-
-.project {
-  width: calc(50% - 4px); }
   @media screen and (max-width: 600px) {
-    .project {
+    .project, .block {
       width: 100%; } }
 
 hr {
